# feather

./: CMakeLists.txt  Doxyfile  README.md  TODO
assets/: CMakeLists.txt
assets/icons/: CMakeLists.txt  component_selection.xcf
assets/images/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  feather.rc  main.cpp
src/lib/: CMakeLists.txt  axis.glsl  core.cpp  core.hpp  deps.hpp  field.hpp  floor.vert  mesh.glsl  node.hpp  object.hpp  polygon_mesh.hpp  qml.cpp  qml.hpp  scenegraph.cpp  scenegraph.hpp  shader.hpp  singleton.hpp  test.frag  test.vert  texture.glsl  types.hpp  viewport.cpp  viewport.hpp  viewportthread.cpp  viewportthread.hpp
src/lib/core/: CMakeLists.txt  camera.hpp  command.hpp  core.hpp  data.hpp  deform.hpp  deps.hpp  draw.hpp  field.hpp  gl.hpp  import.hpp  layer.hpp  light.hpp  mesh.hpp  modify.hpp  node.hpp  null.hpp  object.hpp  parameter.hpp  pluginmanager.cpp  pluginmanager.hpp  root_node.hpp  scenegraph.hpp  selection.hpp  shader.hpp  singleton.hpp  state.hpp  status.hpp  texture.hpp  time.hpp  types.hpp  ui.hpp
src/lib/nodes/: CMakeLists.txt  polygon_mesh.hpp  polygon_plane.hpp  transform.hpp
src/lib/nodes/polyplaneshape/: CMakeLists.txt  main.cpp
src/lib/plugins/: CMakeLists.txt
src/lib/plugins/common/src/: CMakeLists.txt  main.cpp
src/lib/plugins/obj_format/: CMakeLists.txt
src/lib/plugins/obj_format/src/: CMakeLists.txt  main.cpp
src/lib/plugins/obj_format/widgets/: CMakeLists.txt
src/lib/plugins/polygon/: CMakeLists.txt
src/lib/plugins/polygon/nodes/: CMakeLists.txt
src/lib/plugins/polygon/src/: CMakeLists.txt  main.cpp
src/lib/plugins/polygon/widgets/: CMakeLists.txt
src/lib/plugins/polygon/widgets/menus/: CMakeLists.txt
src/lib/plugins/polygon/widgets/menus/main/: CMakeLists.txt
src/lib/plugins/polygon/widgets/menus/main/file/: CMakeLists.txt
src/lib/plugins/polygon/widgets/menus/main/file/import/: CMakeLists.txt  MenuMainFileImportObj.qml
src/lib/qml/: CMakeLists.txt  blue.glsl  commands.cpp  commands.hpp  curves.cpp  curves.hpp  field_model.cpp  field_model.hpp  gl_scene.cpp  gl_scene.hpp  grid_frag.glsl  layer_model.cpp  layer_model.hpp  mesh.glsl  qml.cpp  qml.hpp  qml_deps.hpp  red.glsl  sg_editor.cpp  sg_editor.hpp  tree_model.cpp  tree_model.hpp  viewport.cpp  viewport.hpp  viewport2.cpp  viewport2.hpp  viewport3.cpp  viewport3.hpp  viewportthread.cpp  viewportthread.hpp
src/lib/qml/shaders/: CMakeLists.txt
src/lib/qml/shaders/frag/: CMakeLists.txt  lambert.glsl  test.glsl  wireframe.glsl
src/lib/qml/shaders/geom/: CMakeLists.txt  geom.glsl  wireframe.glsl
src/lib/qml/shaders/vert/: CMakeLists.txt  light.glsl  mesh.glsl
src/lib/vulkan/: CMakeLists.txt  axis.cpp  axis.hpp  debug.cpp  debug.hpp  grid.cpp  grid.hpp  mesh.cpp  mesh.hpp  node.cpp  node.hpp  pipelines.cpp  pipelines.hpp  pointlight.cpp  pointlight.hpp  swapchain.hpp  textureloader.hpp  tools.cpp  tools.hpp  vulkan_deps.hpp  window.cpp  window.hpp
src/lib/vulkan/shaders/: CMakeLists.txt  base.vert  base.vert.spv  build_shaders.sh  build_wireframe_shaders.sh  edge.geom  edge.geom.spv  mesh.frag  mesh.vert  mesh.vert.spv  point.geom  point.geom.spv  point.light.frag  point.light.geom.spv  point.light.vert  point.mesh.frag  point.mesh.frag.spv  point.mesh.geom  point.mesh.geom.spv  point.mesh.vert  point.mesh.vert.spv  point.vert  point.vert.spv  select.mesh.frag  select.mesh.frag.spv  select.mesh.vert  select.mesh.vert.spv  shade.light.frag.spv  shade.light.vert.spv  shade.mesh.frag  shade.mesh.frag.spv  shade.mesh.geom  shade.mesh.geom.spv  shade.mesh.vert  shade.mesh.vert.spv  wire.axis.geom  wire.axis.geom.spv  wire.frag  wire.frag.spv  wire.geom  (+20 more)
src/qml/: AddLayerDialog.qml  AddMenu.qml  AddNodeDialog.qml  CMakeLists.txt  ColorProperties.qml  ColorProperty.qml  CommandLine.qml  EditMenu.qml  FieldEditor.qml  FieldEditorValue.qml  FieldPopup.qml  FieldValue.qml  FileMenu.qml  FileMenuModel.qml  FileMenu_TEMPLATE.qml  HelpMenu.qml  ImageButton.qml  IntField.qml  LayerBar.qml  LayerEditor.qml  LayerPopupMenu.qml  MainMenu.qml  MainMenuModel.qml  MainPopup.qml  MainToolBar.qml  MainWindow.qml  Material.qml  MaterialWindow.qml  Menu.qml  MenuBar.qml  MenuButton.qml  MenuItem.qml  MenuItemDelegate.qml  MenuPanel.qml  MenuStyle.qml  NodeFields.qml  NodeIdModel.qml  NodeModel.qml  NodeOutMenu.qml  NodeTypeModel.qml  (+36 more)
src/qml/node_models/: CMakeLists.txt  NodeCommonModel.qml  NodePolygonModel.qml
src/qml/templates/: CMakeLists.txt  FileMenu.qml
src/test/: CMakeLists.txt  main.cpp
src/vulture/: CMakeLists.txt  main.cpp
