SET(CMAKE_INCLUDE_CURRENT_DIR ON)

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")


FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Quick REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Boost REQUIRED)

SET(feather_SRCS
 main.cpp
)

#SET_SOURCE_FILES_PROPERTIES(${feather_SRCS}
# PROPERTIES
# COMPILE_FLAGS ${CMAKE_CXX_FLAGS} )




SET(QT_USE_QTOPENGL TRUE)

INCLUDE_DIRECTORIES(${feather_core_SOURCE_DIR}
    ${feather_qml_SOURCE_DIR}
    ${Qt5Gui_INCLUDE_DIRS}
    ${Qt5Core_INCLUDE_DIRS}
    ${Qt5Widgets_INCLUDE_DIRS}
    ${Qt5Quick_INCLUDE_DIRS}
)

LINK_DIRECTORIES(${feather_core_BINARY_DIR}
    ${feather_qml_BINARY_DIR}
)

LINK_LIBRARIES(feather_qml feather_core)

ADD_DEFINITIONS( ${Qt5Widgets_DEFINITIONS}
    ${Qt5Quick_DEFINITIONS}
)

SET(feather_LIBS
 ${Qt5Widgets_LIBRARIES}
 ${Qt5Quick_LIBRARIES}
 ${QTOPENGL_LIBRARIES}
 ${OPENGL_LIBRARIES}
 ${BOOST_LIBRARIES})

SET(CMAKE_CXX_FLAGS "-I/usr/include/boost")

SET(CMAKE_CXX_FLAGS "${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${Qt5Quick_EXECUTABLE_COMPILE_FLAGS}")

ADD_EXECUTABLE(feather ${feather_SRCS} ${feather_MOC_SRCS})

TARGET_LINK_LIBRARIES(feather ${feather_LIBS})

# INSTALL
INSTALL( TARGETS feather
    RUNTIME DESTINATION /usr/local/feather)
