SET(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Quick REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Boost REQUIRED)

SET(feather_SRCS
 main.cpp
)

SET(QT_USE_QTOPENGL TRUE)

INCLUDE_DIRECTORIES(${feather_core_SOURCE_DIR}
    ${feather_qml_SOURCE_DIR}
    ${Qt5Gui_INCLUDE_DIRS}
    ${Qt5Core_INCLUDE_DIRS}
    ${Qt5Widgets_INCLUDE_DIRS}
    ${Qt5Quick_INCLUDE_DIRS}
)

LINK_DIRECTORIES(${feather_core_BINARY_DIR}
    ${feather_qml_BINARY_DIR}
)

LINK_LIBRARIES(feather_qml feather_core)

ADD_DEFINITIONS( ${Qt5Widgets_DEFINITIONS}
    ${Qt5Quick_DEFINITIONS}
)

SET(feather_LIBS
 ${Qt5Widgets_LIBRARIES}
 ${Qt5Quick_LIBRARIES}
 ${QTOPENGL_LIBRARIES}
 ${OPENGL_LIBRARIES}
 ${BOOST_LIBRARIES})

SET(CMAKE_CXX_FLAGS "-I/usr/include/boost")

SET(CMAKE_CXX_FLAGS "${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${Qt5Quick_EXECUTABLE_COMPILE_FLAGS}")

ADD_EXECUTABLE(feather ${feather_SRCS} ${feather_MOC_SRCS})

SET_TARGET_PROPERTIES(feather
    PROPERTIES
    CMAKE_CXX_STANDARD 11
    CMAKE_CXX_STANDARD_REQUIRED ON
)

TARGET_LINK_LIBRARIES(feather ${feather_LIBS})

# Config file
FILE(GLOB CONFIG_FILES "feather.rc")
INSTALL(FILES ${CONFIG_FILES} DESTINATION /usr/local/feather)

# INSTALL
INSTALL( TARGETS feather
    RUNTIME DESTINATION /usr/local/feather)
