SET(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Quick REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Boost REQUIRED)

FIND_PACKAGE(Qt5Qml REQUIRED)
FIND_PACKAGE(Qt53DCore REQUIRED)
FIND_PACKAGE(Qt53DQuick REQUIRED)
FIND_PACKAGE(Qt53DRenderer REQUIRED)
FIND_PACKAGE(Qt53DInput REQUIRED)

SET(feather_SRCS
 main.cpp
)

SET(QT_USE_QTOPENGL TRUE)

INCLUDE_DIRECTORIES(${feather_core_SOURCE_DIR}
    ${feather_qml_SOURCE_DIR}
    ${Qt5Gui_INCLUDE_DIRS}
    ${Qt5Core_INCLUDE_DIRS}
    ${Qt5Widgets_INCLUDE_DIRS}
    ${Qt5Quick_INCLUDE_DIRS}
#
    ${Qt5Qml_INCLUDE_DIRS}
    ${Qt53DQuick_INCLUDE_DIRS}
    ${Qt5OpenGL_INCLUDE_DIRS}
    ${Qt3DCore_INCLUDE_DIRS}
    ${Qt3DRenderer_INCLUDE_DIRS}
    ${Qt3DInput_INCLUDE_DIRS}
)

LINK_DIRECTORIES(${feather_core_BINARY_DIR}
    ${feather_qml_BINARY_DIR}
)

LINK_LIBRARIES(feather_qml feather_core)

ADD_DEFINITIONS( ${Qt5Widgets_DEFINITIONS}
    ${Qt5Quick_DEFINITIONS}
#
    ${Qt5Core_INCLUDE_DIRS}
    ${Qt5Gui_INCLUDE_DIRS}
    ${Qt5Qml_INCLUDE_DIRS}
    ${Qt53DQuick_DEFINITIONS}
    ${Qt5OpenGL_DEFINITIONS}
    ${Qt3DCore_DEFINITIONS}
    ${Qt3DRenderer_DEFINITIONS}
    ${Qt3DInput_DEFINITIONS}
)

SET(feather_LIBS
 ${Qt5Widgets_LIBRARIES}
 ${Qt5Quick_LIBRARIES}
 ${QTOPENGL_LIBRARIES}
 ${OPENGL_LIBRARIES}
 ${BOOST_LIBRARIES}
#
 ${Qt5Core_LIBRARIES}
 ${Qt5Gui_LIBRARIES}
 ${QT5Qml_LIBRARIES}
 ${QT53DQuick_LIBRARIES}
 ${QT5OpenGL_LIBRARIES}
 ${QT53DCore_LIBRARIES}
 ${QT53DRenderer_LIBRARIES}
 ${QT53DInput_LIBRARIES}
)

SET(CMAKE_CXX_FLAGS "-I/usr/include/boost")

SET(CMAKE_CXX_FLAGS "${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${Qt5Quick_EXECUTABLE_COMPILE_FLAGS}")

SET(CMAKE_CXX_FLAGS "${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${Qt5Gui_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${Qt5Qml_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${Qt53DQuick_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${Qt5OpenGL_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${Qt3DCore_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${Qt3DRenderer_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${Qt3DInput_EXECUTABLE_COMPILE_FLAGS}")

ADD_EXECUTABLE(feather ${feather_SRCS} ${feather_MOC_SRCS})

SET_TARGET_PROPERTIES(feather
    PROPERTIES
    CMAKE_CXX_STANDARD 11
    CMAKE_CXX_STANDARD_REQUIRED ON
)

TARGET_LINK_LIBRARIES(feather ${feather_LIBS})

QT5_USE_MODULES(feather Widgets Core Gui Qml Quick 3DQuick OpenGL 3DCore 3DRenderer 3DInput)

# Config file
FILE(GLOB CONFIG_FILES "feather.rc")
INSTALL(FILES ${CONFIG_FILES} DESTINATION /usr/local/feather)

# INSTALL
INSTALL( TARGETS feather
    RUNTIME DESTINATION /usr/local/feather)
