SET(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

FIND_PACKAGE(Boost REQUIRED)

SET(coretest_SRCS
 main.cpp
)

INCLUDE_DIRECTORIES(${feather_core_SOURCE_DIR})

LINK_DIRECTORIES(${feather_core_BINARY_DIR})

LINK_LIBRARIES(feather_core)

SET(coretest_LIBS ${BOOST_LIBRARIES})

SET(CMAKE_CXX_FLAGS "-I/usr/include/boost")

ADD_EXECUTABLE(coretest ${coretest_SRCS})

SET_TARGET_PROPERTIES(coretest
    PROPERTIES
    CMAKE_CXX_STANDARD 11
    CMAKE_CXX_STANDARD_REQUIRED ON
)

TARGET_LINK_LIBRARIES(coretest ${coretest_LIBS} ${CMAKE_DL_LIBS})
